--- a/src/App.scss
+++ b/src/App.scss
@@ -3,16 +3,22 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.767);
+    background-color: rgba(95, 68, 68, 0.877);
 }
 
-*::before {
+*, ::before, ::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    outline: none ;
 }
 
 button {
     background: none;
     border: none;
+}
+
+.test {
+    width: 100%;
+    height: 200vh;
 }
