--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -8,7 +8,13 @@
     position: fixed;
     width: 100%;
     padding: 12px 4%;
+    font-size: 0.9rem;
     color: white;
+    background: linear-gradient(to bottom, rgba(74,74,74,0.6), rgba(0,0,0,0.6));
+    transition: .3s ease-in-out;
+
+
+
     a {
         color: white;
         text-decoration: none;
@@ -19,6 +25,7 @@
     }
 
     &__burger {
+        cursor: pointer;
         color: white;
         margin-right: 1rem;
         @media screen and (min-width:768px) {
@@ -32,6 +39,7 @@
 
     &__links {
         margin-left: 20px;
+        // transition: .3s ease-in-out;
         .nav__link {
             text-decoration: none;
             padding: 5px 10px;
@@ -45,24 +53,28 @@
             right: 0;
 
             .show & {
-                display: flex;
+                display: flex; 
                 flex-direction: column;
                 width: 100%;
-                height: 100vh;
-                top: 60px;
-                visibility: visible;
+                height: calc(100vh - 60px);
+                top: 50px;
+                visibility: visible;                                                                                                      
                 background-color: black;
             }
 
             .nav__link {
                 padding: 15px 4%;
-                font-size: 1.2rem;
+                font-size: 1rem;
             }
         }
     }
 
     &__actions {
-
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        flex: 1;
+        
 
         .nav__action {
             margin-left: 10px;
