--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgba(95, 68, 68, 0.877);
+    background-color: rgb(0, 0, 0);
 }
 
 *, ::before, ::after {
@@ -20,5 +20,5 @@ button {
 
 .test {
     width: 100%;
-    height: 200vh;
+    height: 50vh;
 }
