--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -56,7 +56,7 @@
                 display: flex; 
                 flex-direction: column;
                 width: 100%;
-                height: calc(100vh - 60px);
+                height: 100vh;
                 top: 50px;
                 visibility: visible;                                                                                                      
                 background-color: black;
