--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -12,6 +12,11 @@
         color: inherit;
     }
 
+    .container {
+        max-width: 980px;
+        margin: 0 auto;
+    }
+
     &__socials {
         margin-left: -0.2rem;
         padding: 1rem 0;
