--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -4,13 +4,14 @@
     justify-content: space-between;
     position: relative;
 
+    z-index: 1;
     flex-wrap: wrap;
     position: fixed;
     width: 100%;
     padding: 12px 4%;
     font-size: 0.9rem;
     color: white;
-    background: linear-gradient(to bottom, rgba(74,74,74,0.6), rgba(0,0,0,0.6));
+    //background: linear-gradient(to bottom, rgba(74,74,74,0.6), rgba(0,0,0,0.6));
     transition: .3s ease-in-out;
 
 
